Correção do cálculo do erro