@@ -1,4 +1,3 @@
-
 plugins {
     // Apply the application plugin to add support for building a CLI application in Java.
     application
@@ -24,15 +23,15 @@ dependencies {
     // This dependency is used by the application.
     implementation(libs.guava)
 
-    implementation(files("libs/libGraphics.jar"))
-    implementation(files("libs/libChart.jar"))
-    implementation(files("libs/libUtil.jar"))
+    implementation(files("../libs/libGraphics.jar"))
+    implementation(files("../libs/libChart.jar"))
+    implementation(files("../libs/libUtil.jar"))
 }
 
 // Apply a specific Java toolchain to ease working on different environments.
 java {
     toolchain {
-        languageVersion = JavaLanguageVersion.of(21)
+        languageVersion = JavaLanguageVersion.of(25)
     }
 }
 
@@ -44,4 +43,14 @@ application {
 tasks.named<Test>("test") {
     // Use JUnit Platform for unit tests.
     useJUnitPlatform()
+}
+
+tasks.withType<Test> {
+    useJUnitPlatform() // Ensure JUnit Platform is used for test discovery
+}
+
+gradle.projectsEvaluated {
+    tasks.withType<JavaExec> {
+        jvmArgs("--enable-native-access=ALL-UNNAMED")
+    }
 }
